--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "postcss": "^8.4.48",
+    "react-fast-marquee": "^1.6.5",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10"
   }
