--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.13.1",
+    "lucide-react": "^0.468.0",
+    "lunarphase-js": "^2.0.3",
     "react": "^18.3.1",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-open-weather": "^1.3.8",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
