--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-animated-weather": "^4.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-open-weather": "^1.3.8",
     "react-router-dom": "^6.28.0"
   },
