--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-medium-image-zoom": "^5.2.12",
     "react-open-weather": "^1.3.8",
     "react-router-dom": "^6.28.0"
   },
